# protoc-gen-strict

./: .gitignore  .npmignore  BUILD.bazel  WORKSPACE  cli.js  index.js  package-lock.json  package.json  postinstall.js  strict.proto
.vsts/: darwin.yml  linux.yml  win32.yml
example/: .grpc-gen.yml
example/src/: example.proto
src/: generator.cc  strict-generator-options.cc  strict-generator-options.hh  strict-generator.cc  strict-generator.hh
